--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
     </div>
 
     <script>
-      const apiKey = "AIzaSyCI1hknVJFcXL_s5eoTwuPRKBWj8PpktOg";
+      const apiKey = "<GEMINI API KEY>";
       pdfjsLib.GlobalWorkerOptions.workerSrc =
         "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
       const API_ENDPOINT =
@@ -733,3 +733,4 @@
     </script>
   </body>
 </html>
+
